# mjolnir

./: .gitignore  README.md  install.sh  mjolnir  mjolnir-watchdog.sh  mjolnir.sh  plan.md  pyproject.toml
.claude/commands/: mjolnir-plan.md
.github/workflows/: ci.yml  deploy.yml  e2e.yml
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  repository.py  result.py
backend/app/routes/: tasks.py
backend/tests/: conftest.py  test_tasks.py
docs/: flow.md
frontend/: index.html
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts  tasks.ts
frontend/src/types/: task.ts
infra/: budget.tf  cloud-init.yaml  compute.tf  main.tf  outputs.tf  retry-arm.sh  terraform.tfvars.example  variables.tf
lib/: notify.py  parse_stream.py  state.py
prompts/: evaluator.md  generator.md  planner.md  rubric.md  tester.md
templates/: project.toml.example
tests/: test_cli.sh  test_notify.py  test_orchestration.sh  test_parse_stream.py  test_state.py
tests/e2e/: project.toml  run_e2e.sh
workspace/: .gitignore
